--- a/blog.html
+++ b/blog.html
@@ -30,15 +30,15 @@
                 <li class="nav-item active">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Blog
+                        /Genral law Blog
                     </a>
                    
                 </li>
                 <li class="nav-item ">
-                  <a class="nav-link" href="#">About us </a>
+                  <a class="nav-link" href="#">/ About us </a>
               </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact </a>
+                    <a class="nav-link" href="#">/Contact </a>
                 </li>
               
             </ul>
