--- a/blog.html
+++ b/blog.html
@@ -30,7 +30,7 @@
                 <li class="nav-item active">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        /Genral law Blog
+                        /Genral law/Blog
                     </a>
                    
                 </li>
