--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
                   <a class="nav-link" href="#">About us </a>
               </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Contact </a>
+                    <a class="nav-link" href="#">/GenralLaw/Contact </a>
                 </li>
               
             </ul>
