--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 </li>
               
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"/GenralLaw/>
+                    <a class="nav-link dropdown-toggle" href="GenralLaw/" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
                         Blog
                     </a>
                    
