--- a/contact.html
+++ b/contact.html
@@ -62,10 +62,10 @@
                     
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/GenralLaw/">About us</a>
+                  <a class="nav-link" href="/GenralLaw/about.html">About us</a>
               </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/GenralLaw/">Contact </a>
+                    <a class="nav-link" href="/GenralLaw/contact.html">Contact </a>
                 </li>
               
             </ul>
