--- a/about.html
+++ b/about.html
@@ -35,10 +35,10 @@
                    
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">About us </a>
+                  <a class="nav-link" href="/GenralLaw/about.html">About us </a>
               </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact </a>
+                    <a class="nav-link" href="/GenralLaw/contact.html">Contact </a>
                 </li>
               
             </ul>
