--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 
               <li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="/GenralLaw/blog.html.html">blog</a>
+                    <a class="nav-link" href="/GenralLaw/blog.html">blog</a>
               </li>
                    
 
