--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
                 
               <li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="/GenralLaw/blog.html.html">blog</a>
+                    <a class="nav-link" href="/GenralLaw/blog.html">blog</a>
               </li>
                    
 
