--- a/blog.html
+++ b/blog.html
@@ -24,14 +24,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                     <a class="nav-link" href="/GenralLaw/Home.html">Home <span class="sr-only">(current)</span></a>
+                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item ">
                     <a class="nav-link" href="/GenralLaw/blog.html">blog</a>
               </li>
  
                 <li class="nav-item">
-                  <a class="nav-link" href="/GenralLaw/About us.html">About us</a>
+                  <a class="nav-link" href="/GenralLaw/About us.html">AboutUs</a>
               </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/GenralLaw/Contact.html">Contact </a>
@@ -41,7 +41,8 @@
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buy Now</button>
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Signup</button>
             </form>
         </div>
       </nav>
