--- a/blog.html
+++ b/blog.html
@@ -31,10 +31,10 @@
               </li>
  
                 <li class="nav-item">
-                  <a class="nav-link" href="/GenralLaw/About us.html">AboutUs</a>
+                  <a class="nav-link" href="/GenralLaw/AboutUs.html">AboutUs</a>
               </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/GenralLaw/Contact.html">Contact </a>
+                    <a class="nav-link" href="/GenralLaw/Contact.html">Contact</a>
                 </li>
               
             </ul>
