--- a/contact.html
+++ b/contact.html
@@ -49,17 +49,17 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
              <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                     <a class="nav-link" href="/GenralLaw/Home.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item ">
                     <a class="nav-link" href="/GenralLaw/blog.html">blog</a>
               </li>
  
                 <li class="nav-item">
-                  <a class="nav-link" href="/GenralLaw/AboutUs.html">AboutUs</a>
+                  <a class="nav-link" href="/GenralLaw/about.html">about</a>
               </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/GenralLaw/Contact.html">Contact</a>
+                    <a class="nav-link" href="/GenralLaw/contact.html">contact</a>
                 </li>
               
             </ul>
