--- a/index.html
+++ b/index.html
@@ -234,8 +234,42 @@
         </div>
       </div>
     </div>
-
-  <div class="footer">
+    
+    
+    <div class="container my-5">
+      <div class="row mb-2">
+        <div class="col-md-6">
+          <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+            <div class="col p-4 d-flex flex-column position-static">
+              <strong class="d-inline-block mb-2 text-primary">Abhishek</strong>
+              <h3 class="mb-0">My Blogs</h3>
+              <div class="mb-1 text-muted">Nov 12</div>
+              <p class="card-text mb-auto">all blogs are here for you no need to go any other sites .</p>
+              <a href="#" class="stretched-link">Continue reading</a>
+            </div>
+            <div class="col-auto d-none d-lg-block">
+              <img width="200" height="250" xmlns="http://www.w3.org/2000/svg" src="pen.jpg"alt="">
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+            <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+              <div class="col p-4 d-flex flex-column position-static">
+                <strong class="d-inline-block mb-2 text-success">law related </strong>
+                <h3 class="mb-0">Case studies</h3>
+                <div class="mb-1 text-muted">Nov 11</div>
+                <p class="mb-auto">all case studies are related to all cases like TORT,CONTRACT ,CRIME with detailed example.</p>
+                <a href="#" class="stretched-link">Continue reading</a>
+              </div>
+              <div class="col-auto d-none d-lg-block">
+               <img width="200" height="250" xmlns="http://www.w3.org/2000/svg" src="lawre.jpg"alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+   
+    <div class="footer">
     <div class="footer-content">
      <div class="footer-section about"></div>
      <div class="footer-section about"></div>
