--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
       </nav>
 
-<!-- Login Modal -->
+<!-- Modal -->
 <div class="modal fade" id="LoginModal" tabindex="-1" role="dialog" aria-labelledby="LoginModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -114,7 +114,7 @@
 
 
 
-<!--SignUp Modal -->
+<!-- Modal -->
 <div class="modal fade" id="SignUpModal" tabindex="-1" role="dialog" aria-labelledby="SignUpModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
