--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
                 <li class="nav-item ">
                     <a class="nav-link" href="/GenralLaw/blog.html">blog</a>
               </li>
+                <li class="nav-item ">
+                    <a class="nav-link" href="/GenralLaw/News.html">News</a>
+              </li>
+                
  
                 <li class="nav-item">
                   <a class="nav-link" href="/GenralLaw/about.html">about</a>
