--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg" style="background-color: black;">
+      <a class="navbar-brand"href="">
+        <img src="generallaw.jpeg"width="120px"height="70px ">
+      </a>
         <a class="navbar-brand" href="#">GenralLaw </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
