--- a/index.html
+++ b/index.html
@@ -2,48 +2,62 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>Genral Law </title>
-    <style>
-        .btn{
-            padding: 0%;
-            margin: 4px;
-            border-radius: 7%;
-            font-size: medium;
-        }
-        .footer{
-          background:white;
-          color:black;
-          height: 50px;
-          position: relative;
+  <title>General Law </title>
 
-        }
-        .footer .footer-bottom{
-          background: rgb(204, 202, 202);
-          color:black;
-          height: 50px;
-          width: 100%;
-          text-align: center;
-          position:absolute;
-          bottom: 0px;
-          left: 0px;
-          padding: 10px;
+  <style>
+    .btn {
+      padding: 0%;
+      margin: 4px;
+      border-radius: 10%;
+      font-size: medium;
 
-          
-        }
-    </style>
+    }
+
+    #more {
+      display: none;
+    }
+
+    .footer {
+      background: white;
+      color: black;
+      height: 50px;
+      position: relative;
+
+    }
+
+    .footer .footer-bottom {
+      background: rgb(204, 202, 202);
+      color: black;
+      height: 50px;
+      width: 100%;
+      text-align: center;
+      position: absolute;
+      bottom: 0px;
+      left: 0px;
+      padding: 10px;
+
+
+    }
+  </style>
 </head>
 
 <body>
-   <nav class="navbar navbar-expand-lg bg-light">
-    <a class="navbar-brand" href="#">GenralLaw </a>
+
+
+
+
+
+
+  <nav class="navbar navbar-expand-lg bg-light">
+    <a class="navbar-brand" href="#">GeneralLaw </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -51,10 +65,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="/GenralLaw/Home.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/GeneralLaw/Home.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/GneralLaw/News.html">News </a>
+          <a class="nav-link" href="/GeneralLaw/News.html">News </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="https://blogpoint6.blogspot.com/GneralLaw/Blog.html">Blog</a>
@@ -62,10 +76,10 @@
 
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/GenralLaw/about.html">about </a>
+          <a class="nav-link" href="/GeneralLaw/AboutUs.html">AboutUs </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/GneralLaw/contact.html">Contact </a>
+          <a class="nav-link" href="/GeneralLaw/Contact.html">Contact </a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
@@ -290,31 +304,58 @@
       </div>
     </div>
   </div>
-   
-    <div class="footer">
-    <div class="footer-content">
-     <div class="footer-section about"></div>
-     <div class="footer-section about"></div>
-     <div class="footer-section about"></div>
-    </div>
 
+
+  <picture>
+
+    <img src="generallaw.jpeg" width="650px" height="550px">
+  </picture>
+
+
+  <div class="wp-block-media-text__content">
+    <div style="height:32px;" aria-hidden="true" class="wp-block-spacer"></div>
+    <h2>Why GeneralLaw</h2>
+    <p>There is never been a better time to learn &amp; good lawyer never stops learning. GENERALLAW is committed to
+      “servientes populi et legis”. We’re heading towards different aspects of legal world.</p>
+    <ul>
+      <li>Legal Education</li>
+      <li>Research &amp; Analysis</li>
+      <li>Professional</li>
+      <li>Own Analysis Case Studies</li>
+      <div style="height:32px;" aria-hidden="true" class="wp-block-spacer"></div>
+  </div>
+
+
+  <a href='https://bachelorthesiswritingservice.com/'>https://bachelorthesiswritingservice.com/</a>
+  <script type='text/javascript'
+    src='https://www.freevisitorcounters.com/auth.php?id=24013c32a9451112b3bef9147b97eb2062cefd0c'></script>
+  <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/685916/t/5"></script>
+
+
+  <div class="footer">
+    <div class="footer-content">
+      <div class="footer-section about"></div>
+      <div class="footer-section about"></div>
+      <div class="footer-section about"></div>
+    </div>
     <div class="footer-bottom">
       &copy; GenralLaw.com | Designed by abhi developer
     </div>
   </div>
-  
 
-<!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
+
 </body>
 
 </html>
